src/test/compile-fail/match-vec-mismatch.rs
fn main() {
    match ~"foo" {
        ['f', 'o', ..] => { } //~ ERROR mismatched types: expected `~str` but found a vector pattern
        _ => { }
    }
}
